fix horizontal movement of div on mobile

--- a/style.css
+++ b/style.css
@@ -293,9 +293,10 @@ hr {
  }
  .blog {
   width: 100%;
+  overflow: hidden;
+  max-width: auto;
   float: left;
   margin-top: 0;
-  overflow-x: hidden;
  }
  .timeline ul {
   padding: 30px 5px;
